input fields are no longer hidden by navbar

--- a/kwiaciarnia/static/styles/main.css
+++ b/kwiaciarnia/static/styles/main.css
@@ -19,8 +19,3 @@
 body {
   background-color: #f5ebeb;
 }
-
-
-tglr {
-  color: black;
-}
